# astyle-wheel

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CMakeLists.txt  README.md  pyproject.toml  shell.nix
.github/workflows/: astyle-format.yml  astyle.yml  main.yml  py-astyle.yml  py.yml  pyastyle.yml  pyastyle2.yml  version.yml
scripts/: git-commit.sh  move-package.js  update-version.pl
src/astyle/: __init__.c  __init__.py  __init__.pyi  __main__.py  wrap.cc  wrap.h  wrap.pxd
tests/: astyle_test.py  expected.c
